Small Addition to site

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> klil is the f**in man!!</h1>
+<h1> klil is the f**in man!! - i love me!</h1>
 </body>
 </html>
